--- a/frontend/app/dashboard/dashboard.html
+++ b/frontend/app/dashboard/dashboard.html
@@ -1,6 +1,5 @@
-<section class="content-header">
-    <h1>Dashboard <small>Versão 1.0</small> </h1>
-</section>
+<content-header titulo="Dashboard" subtitulo="Versão 1.0"></content-header>
+
 
 <section class="content">
     <div class="col-xs-4">
