incluindo component no template valueBox do dashbord e criando factory para as coluna do bootstrap

--- a/frontend/app/dashboard/dashboard.html
+++ b/frontend/app/dashboard/dashboard.html
@@ -2,37 +2,13 @@
 
 
 <section class="content">
-    <div class="col-xs-4">
-        <div class="small-box bg-green">
-            <div class="inner">
-                <h3>R$ 10</h3>
-                <p>Total de Créditos</p>
-            </div>
-            <div class="icon">
-                <i class="fa fa-bank"></i>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-4">
-            <div class="small-box bg-red">
-                <div class="inner">
-                    <h3>R$ 10</h3>
-                    <p>Total de Débitos</p>
-                </div>
-                <div class="icon">
-                    <i class="fa fa-credit-card"></i>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-4">
-                <div class="small-box bg-blue">
-                    <div class="inner">
-                        <h3>R$ 10</h3>
-                        <p>Valor Consolidado</p>
-                    </div>
-                    <div class="icon">
-                        <i class="fa fa-money"></i>
-                    </div>
-                </div>
-            </div>
+
+    <value-box grid="4" cor-class="bg-green" icone-class="fa fa-bank" valor="R$ 10" text="Total de Créditos">
+    </value-box>
+
+    <value-box grid="4" cor-class="bg-red" icone-class="fa fa-credit-card" valor="R$ 10" text="Total de Débitos">
+    </value-box>
+
+    <value-box grid="4" cor-class="bg-blue" icone-class="fa fa-money" valor="R$ 10" text="Valor Consolidado">
+    </value-box>
 </section>
